Fix text visibility and add hover features Fix containers visibility when page is shrinked. Add hover feature to button and links.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* * {
+    border: 3px solid red;
+} */
 body {
     font-family: 'Open Sans', 'Helvetica Neue';
     margin: 0;
@@ -21,8 +24,10 @@ ul {
 header {
     background-color: #1F2937;
     color: white;
-
-    padding: 16px 180px;
+    
+    display: flex;
+    flex-direction: column;
+    padding: 10px 10px;
     padding-bottom: 100px;
 }
 
@@ -30,8 +35,6 @@ header .container {
     display: flex;
     justify-content: space-between;
     margin-bottom: 60px;
-    gap: 400px;
-    white-space: nowrap;
 }
 
 .links {
@@ -41,13 +44,13 @@ header .container {
 .main {
     display: flex;
     gap: 24px;
+    align-self: center;
 }
 
 .main .left-text {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    min-width: 400px;
     max-width: 400px;
     gap: 6px;
 }
@@ -56,6 +59,10 @@ header .container {
 .left-text .text {
     font-size: 14px;
     color: #b3b4b6;
+}
+
+.link:hover {
+    color: rgba(255, 255, 255, 0.824);
 }
 
 h1 {
@@ -68,11 +75,10 @@ h1 {
 
 .main .image {
     height: 50px;
-    width: 300px;
+    max-width: 300px;
     background-color: #b3b4b66f;
     padding: 60px;
     margin-left: auto;
-    white-space: nowrap;
 
     display: flex;
     align-items: center;
@@ -88,12 +94,17 @@ h1 {
     padding: 4px 16px;
 }
 
+button:hover {
+    background-color: white;
+    color: #3882F6;
+}
+
 /* INFO SECTION */
 .info {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 12px 300px;
+    padding-top: 12px;
     padding-bottom: 64px;
     align-content: center;
 }
@@ -106,19 +117,19 @@ h2 {
     gap: 20px;
     display: flex;
     justify-content: center;
-    
+    flex-wrap: wrap;
 }
 
 .images-text li {
-    width: 100px;
+    width: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 li .img {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border-style: solid;
     border-color: #3882F6;
     border-radius: 8px;
@@ -128,20 +139,23 @@ li .img {
 /* QUOTE SECTION */
 .quote {
     background-color: #E5E7EB;
-    padding: 50px 360px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .quote .container {
     max-width: 400px;
-    min-width: 400px;
     display: flex;
     flex-direction: column;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .quote .container .text {
-    font-size: 18px;
+    font-size: 20px;
     font-style: italic;
     font-weight: 250;
     align-self: center;
@@ -149,7 +163,7 @@ li .img {
 }
 
 .quote .container .author {
-    font-size: 14px;
+    font-size: 16px;
     text-align: end;
     font-weight: bold;
     align-self: flex-end;
@@ -161,7 +175,7 @@ section.ad {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 48px 180px;
+    padding: 48px 10px;
 }
 
 .ad-container {
@@ -171,7 +185,6 @@ section.ad {
     padding: 32px 90px;
     flex: 1;
     max-width: 400px;
-    min-width: 400px;
 
     display: flex;
     justify-content: space-between;
